--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
