--- a/server/.env example
+++ b/server/.env example
@@ -7,3 +7,5 @@ DB_USER=<your_db_username>
 DB_PASSWORD=<your_db_password>
 DB_CLUSTER=<your_cluster_name>
 DB_NAME=<your_database_name>
+
+JWT_SECRET=<your_jwt_secret?
