--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.1",
     "uuid": "^10.0.0"
   }
 }
